--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,11 @@
 </ion-header>
 
 <ion-content padding>
+
   The world is your oyster.
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+  <a routerLink="/home2" routerLinkActive="active">login</a>
+
 </ion-content>
