--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,11 @@
 
   <link href="build/main.css" rel="stylesheet">
   <base href="/">
+  <style>
+    .scroll-content {
+      overflow-y: auto;!important;
+    }
+  </style>
 
 </head>
 <body>
