--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,19 @@
 <html lang="en" dir="ltr">
 <head>
   <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self';
+        content="default-src
+                    'self'
+                    https://*.braintreegateway.com
+                    https://*.paypal.com
+                    gap: data:;
                  script-src
                     'self'
                     https://www.googletagmanager.com
                     https://assets.zendesk.com
                     http://www.google-analytics.com
                     https://v2.zopim.com
+                    https://*.braintreegateway.com
+                    https://www.paypalobjects.com
                     http://localhost:*
                     'unsafe-inline' 'unsafe-eval';
                  connect-src
@@ -17,6 +23,7 @@
                     https://filterize.zendesk.com
                     wss://*.zopim.com
                     https://sentry.io
+                    https://*.braintreegateway.com
                     ws://localhost:*
                     'unsafe-eval';
                  object-src 'self';
@@ -31,20 +38,11 @@
                  img-src
                     'self'
                     https://v2.zopim.com
+                    https://*.paypal.com
                     data:">
 
-  <script>
-    dataLayer = [];
-  </script>
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-54VLFTN');</script>
-  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
-  <title>Ionic App</title>
+  <title>Filterize Console</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
@@ -60,8 +58,8 @@
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.log('Error', err));
+        .then(function() {console.log('service worker installed')})
+        .catch(function (err) {console.log('Error', err)});
     }
   </script>
 
@@ -73,6 +71,16 @@
       overflow-y: auto;!important;
     }
   </style>
+  <script>
+    dataLayer = [];
+  </script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s ,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-54VLFTN');</script>
+  <!-- End Google Tag Manager -->
 
   <script>
     window.zEmbed||(function(){
