--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
                     https://*.braintreegateway.com
                     https://www.paypalobjects.com
                     http://localhost:*
+                    about:
                     'unsafe-inline' 'unsafe-eval';
                  connect-src
                     'self'
